--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>javax</groupId>
@@ -22,11 +29,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.benjaminsimon.testconsole</groupId>
-            <artifactId>testconsole</artifactId>
-            <scope>system</scope>
-            <version>1.0</version>
-            <systemPath>${basedir}/src/main/resources/test_console.jar</systemPath>
+            <groupId>com.github.Rrayor</groupId>
+            <artifactId>junior-java-test-console</artifactId>
+            <version>-89e55c593f-1</version>
         </dependency>
         <dependency>
             <groupId>jstl</groupId>
