Improved Exception handling and string validation
added apache.commons.lang escapeHtml() to validateSearch method in Listview class

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
@@ -31,7 +37,7 @@
         <dependency>
             <groupId>com.github.Rrayor</groupId>
             <artifactId>junior-java-test-console</artifactId>
-            <version>fa7f33d38d</version>
+            <version>b636ec3a0c</version>
         </dependency>
         <dependency>
             <groupId>jstl</groupId>
